Reference files added

--- a/Student_attendance/templates/app1/result.html
+++ b/Student_attendance/templates/app1/result.html
@@ -17,7 +17,11 @@
 		</div>
 	<div class="container">
 
-		<marquee class="text-primary p5"> <h3>Designed & Developed by APSSDC Django Team</h3></marquee>
+		<marquee class="text-primary p5"> 
+		<label>Attendees:{{P}} </label>
+		<label>Absentee:{{A}} </label>
+		<label>Total:{{Total}} </label>
+		</marquee>
 		<div align="right" class="m-10">
 		<a class="mt-10 btn btn-primary " href="/static/files/myfile.csv" download>Download File</a>
 		</div>
